--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "eruda": "^1.4.2",
+    "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.13",
     "reset.css": "^2.0.2",
     "vue": "^2.5.2",
