--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lib-flexible": "^0.3.2",
     "mint-ui": "^2.2.13",
     "reset.css": "^2.0.2",
+    "vant": "^0.12.9",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.2",
     "vue-router": "^3.0.1",
@@ -26,6 +27,7 @@
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
+    "babel-plugin-import": "^1.6.3",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
